--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
     <title>Simple Game</title>
-</head>
-<body>
+  </head>
+  <body>
     <button class="btn">Rock</button>
     <button class="btn">Paper</button>
     <button class="btn">Scissors</button>
-</body>
+    <div class="results"></div>
+  </body>
 </html>
