Fix scissor play method

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <button class="btn">Rock</button>
     <button class="btn">Paper</button>
-    <button class="btn">Scissors</button>
+    <button class="btn">Scissor</button>
     <div class="results"></div>
   </body>
 </html>
